find bugs + more comments in overview.apt