@@ -13,8 +13,8 @@
  */
 package org.amplafi.flow.translator;
 
-import org.amplafi.flow.FlowPropertyDefinition;
 import org.amplafi.flow.DataClassDefinition;
+import org.amplafi.flow.FlowPropertyDefinition;
 import org.amplafi.flow.flowproperty.FlowPropertyProvider;
 import org.amplafi.flow.validation.FlowValidationException;
 import org.amplafi.flow.validation.InconsistencyTracking;
@@ -36,7 +36,7 @@ public class ShortFlowTranslator extends AbstractFlowTranslator<Short> {
         if (serializedObject == null ){
             return null;
         } else if ( serializedObject instanceof Number) {
-            return new Short(((Number)serializedObject).shortValue());
+            return Short.valueOf(((Number)serializedObject).shortValue());
         }
         String s = serializedObject.toString();
         try {
